# privacy

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  repro.md
.claude/skills/explain-dp/: SKILL.md
.github/workflows/: MainDistributionPipeline.yml
attacks/: clip_attack_results.md  clip_attack_test.sh  clip_hardzero_stress.sh
benchmark/: plot_common.R
benchmark/clickbench/: README.md  as_clickbench_benchmark.cpp  as_clickbench_benchmark.hpp  pac_clickhouse_benchmark.cpp  pac_clickhouse_benchmark.hpp  plot_clickbench_as.R  plot_clickbench_as_slowdown.R  plot_clickbench_dp.R  plot_clickbench_dp_story.R  plot_clickbench_dp_sweep.R
benchmark/clickbench/clickbench_as_queries/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  (+29 more)
benchmark/dp/: README.md  dp_benchmark_runner.cpp  dp_target_metric_runner.cpp  experiment_repro_notes_20260717.md  extract_dandan_diagnostics.py  fill_tpch_target_metrics.py  generate_controlled_skew_sweep.py  plot_bound_quality.R  plot_controlled_skew_sweep.py  plot_dp_full_utility_runtime.R  plot_dp_sass_prelim_figures.R  plot_q01_avg_cols_m512.R  plot_q01_avg_compact_grid.R  plot_q01_avg_groups.R  plot_q01_stability.R  plot_sass_m_bound_error_grid.R  plot_sass_m_bound_panel.R  plot_sass_m_bound_sweep.R  plot_sass_m_delta_panel.R  plot_sass_sampled_m_1x.R  plot_sass_stability_quick.py  plot_unskewed_sass_m_sweep_vs_dp.R  plot_unskewed_sass_utility_decomposition.R  plot_unskewed_sass_utility_views.R  q14_rate_smoke.sql  run_tpch_jcch_sass_stability.py  run_tpch_sass_stability.py  scan_sqlstorm_sass_stability.py  scan_sqlstorm_stability.py  verify_tpch_saa_bounds.py
benchmark/imdb/: imdb_benchmark.cpp  load.sql  queries.sql  queries_pac_join.sql  schema.sql  setup.sql
benchmark/include/: as_query_rewriter.hpp  benchmark_json.hpp  benchmark_paths.hpp  tpch_stock_queries.hpp.in
benchmark/jcch/: README.md  generate_actual_jcch.py
benchmark/microbench/: analyze_results.py  bench_count.sh  bench_min_max.sh  bench_sum_avg.sh  build_variants.sh  common.sh  create_test_db.sh  plot_microbenchmark.R  run_all.sh
benchmark/pac_microbench/: approx_sum_stability.sql  bench_count.sh  bench_min_max.sh  bench_sum_avg.sh  create_test_db.sh  run_all.sh
benchmark/sqlstorm/: pac_sqlstorm_benchmark.cpp  pac_sqlstorm_benchmark.hpp  pac_stackoverflow_schema.sql
benchmark/tpch/: as_tpch_benchmark.cpp  as_tpch_benchmark.hpp  dp_sass_tpch_utility.cpp  mia_composition.py  mia_simulation.py  pac_tpch_benchmark.cpp  pac_tpch_schema.sql  plot_tpch_as_m_sweep.R  plot_tpch_results.R  run_pac_vs_dp_utility.py  utility_tpch.sql
benchmark/utility_listtransform/: naive_queries.sql  optimized_queries.sql  run.sh
docs/: README.md  syntax.md
docs/benchmark/: README.md  clickbench.md  imdb.md  microbenchmarks.md  sqlstorm.md  tpch.md  utility.md
docs/dp/: dp_benchmark_setup.md  dp_mechanisms.md  dp_sass_smooth_sensitivity.md  optimizations.md
docs/pac/: dp_sass_smooth_sensitivity.md  functions.md  internal_operators.md  query_operators.md  runtime_checks.md  syntax.md  utility.md
docs/simd-asa/: aggregates.md
src/aggregates/: as_aggregate.cpp  as_clip_min_max.cpp  as_clip_sum.cpp  as_count.cpp  as_finalize.cpp  as_min_max.cpp  as_sum.cpp  dp_laplace_noise.cpp  pac_aggregate.cpp  pac_clip_min_max.cpp  pac_clip_sum.cpp  pac_count.cpp  pac_finalize.cpp  pac_min_max.cpp  pac_sum.cpp
src/categorical/: pac_categorical.cpp  pac_categorical_detection.cpp  pac_categorical_lambdas.cpp  pac_categorical_rewriter.cpp
src/compiler/: dp_elastic_compiler.cpp  pac_bitslice_add_fkjoins.cpp  pac_bitslice_compiler.cpp  pac_bitslice_join_chain.cpp  privacy_bitslice_add_fkjoins.cpp  privacy_bitslice_join_chain.cpp  privacy_compiler.cpp  privacy_compiler_helpers.cpp  privacy_mechanisms.cpp
src/core/: privacy_extension.cpp  privacy_optimizer.cpp
src/diff/: pac_utility_diff.cpp  pac_utility_summary.cpp
src/metadata/: privacy_compatibility_check.cpp
src/parser/: privacy_parser.cpp  privacy_parser_helpers.cpp
src/query_processing/: pac_avg_rewriter.cpp  pac_derived_rewriter.cpp  pac_expression_builder.cpp  pac_plan_traversal.cpp  pac_subquery_handler.cpp  pac_topk_rewriter.cpp  privacy_expression_builder.cpp  privacy_fk_resolver.cpp  privacy_plan_traversal.cpp
src/table_functions/: dp_sass_stability_query.cpp
src/test/: test_compiler_functions.cpp  test_plan_traversal.cpp
src/utils/: privacy_helpers.cpp
test/sql/: dp_elastic.test  dp_reject_unsupported_shapes.test  dp_sample_median.test  dp_sass_m.test  dp_sass_stability_query.test  dp_standard.test  imdb_benchmark.test  pac_avg.test  pac_bitslice_compiler_correlated_subqueries.test  pac_bitslice_compiler_uncorrelated_subqueries.test  pac_categorical_lambda.test  pac_categorical_subqueries.test  pac_clip_min_max.test  pac_clip_sum.test  pac_count.test  pac_counters.test  pac_cte.test  pac_derived.test  pac_derived_tables.test  pac_m_sampling.test  pac_min_max.test  pac_multi_pu.test  pac_plan.test  pac_projection_lambda.test  pac_robustness.test  pac_sum.test  pac_topk.test  pac_utility_diff.test  priv_sass_categorical.test  priv_sass_filter.test  privacy_compatible.test  privacy_links.test  privacy_min_group_count.test  privacy_parser.test  sqlstorm_stackoverflow_dp.test  sqlstorm_tpch_dp.test
(+237 files in other folders)
