cmake_minimum_required(VERSION 3.5)

# Set extension name here
set(TARGET_NAME privacy)

# DuckDB's extension distribution supports vcpkg. As such, dependencies can be added in ./vcpkg.json and then
# used in cmake with find_package. Feel free to remove or replace with other dependencies.
# Note that it should also be removed from vcpkg.json to prevent needlessly installing it..
#find_package(OpensSL REQUIRED)

set(EXTENSION_NAME ${TARGET_NAME}_extension)
set(LOADABLE_EXTENSION_NAME ${TARGET_NAME}_loadable_extension)

project(${TARGET_NAME})
include_directories(src/include)
include_directories(benchmark/include)

# Option to disable approximate sum algorithm (use exact cascading instead)
# By default, pac_sum/pac_avg use the approx algorithm (16-bit cascading counters)
# Set PAC_NOAPPROX=ON to use exact cascading instead
option(PAC_NOAPPROX "Disable approximate sum algorithm, use exact cascading" OFF)
if(PAC_NOAPPROX)
    add_definitions(-DPAC_NOAPPROX)
    message(STATUS "privacy: Using exact cascading sum algorithm (PAC_NOAPPROX)")
else()
    message(STATUS "privacy: Using approximate sum algorithm (default)")
endif()

# Extension sources
set(EXTENSION_SOURCES
    src/core/privacy_extension.cpp
    src/core/privacy_optimizer.cpp
    src/metadata/privacy_compatibility_check.cpp
    src/metadata/privacy_metadata_manager.cpp
    src/metadata/privacy_metadata_serialization.cpp
    src/aggregates/as_aggregate.cpp
    src/aggregates/as_count.cpp
    src/aggregates/as_min_max.cpp
    src/aggregates/as_sum.cpp
    src/aggregates/as_finalize.cpp
    src/aggregates/as_clip_sum.cpp
    src/aggregates/as_clip_min_max.cpp
    src/aggregates/dp_laplace_noise.cpp
    src/table_functions/dp_sass_stability_query.cpp
    src/compiler/privacy_compiler.cpp
    src/compiler/privacy_mechanisms.cpp
    src/compiler/privacy_compiler_helpers.cpp
    src/query_processing/pac_avg_rewriter.cpp
    src/query_processing/privacy_expression_builder.cpp
    src/query_processing/privacy_plan_traversal.cpp
    src/query_processing/pac_projection_propagation.cpp
    src/query_processing/privacy_fk_resolver.cpp
    src/compiler/privacy_bitslice_add_fkjoins.cpp
    src/query_processing/pac_subquery_handler.cpp
    src/parser/privacy_parser.cpp
    src/parser/privacy_parser_helpers.cpp
    src/categorical/pac_categorical.cpp
    src/categorical/pac_categorical_detection.cpp
    src/categorical/pac_categorical_lambdas.cpp
    src/categorical/pac_categorical_rewriter.cpp
    src/diff/pac_utility_diff.cpp
    src/diff/pac_utility_summary.cpp
    src/query_processing/pac_topk_rewriter.cpp
    src/query_processing/pac_derived_rewriter.cpp
    src/utils/privacy_helpers.cpp)
build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
build_loadable_extension(${TARGET_NAME} " " ${EXTENSION_SOURCES})

install(
  TARGETS ${EXTENSION_NAME}
  EXPORT "${DUCKDB_EXPORT_SET}"
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}")

# Test runners and benchmarks - only build for native platforms, not WASM or Windows
# (Windows lacks unistd.h and other POSIX features used by the benchmark code)
set(PRIVACY_LINK_LIBS
    duckdb_static
    duckdb_generated_extension_loader
    ${EXTENSION_NAME}
    core_functions_extension
    parquet_extension
    duckdb_static)

# jemalloc is only built on Linux 64-bit; link it when the extension was loaded
# (can't use if(TARGET ...) here because the target isn't defined yet at this point)
if(DUCKDB_EXTENSION_JEMALLOC_SHOULD_LINK)
    list(APPEND PRIVACY_LINK_LIBS jemalloc_extension)
endif()

if(NOT EMSCRIPTEN AND NOT WIN32)
    # Build a single unified test executable that invokes all tests via src/test/test_runner.cpp
    add_executable(pac_test_runner
        src/test/test_runner.cpp
        src/test/test_plan_traversal.cpp
        src/test/test_schema_metadata.cpp
        src/test/test_compiler_functions.cpp
        src/test/test_privacy_parser.cpp)
    target_link_libraries(pac_test_runner ${PRIVACY_LINK_LIBS})

    # TPCH + PAC benchmark runner
    add_executable(pac_tpch_benchmark benchmark/tpch/pac_tpch_benchmark.cpp)
    target_link_libraries(pac_tpch_benchmark ${PRIVACY_LINK_LIBS})

    # TPCH Compiler benchmark runner (compares PAC vs regular TPC-H)
    add_executable(pac_tpch_compiler_benchmark benchmark/tpch/pac_tpch_compiler_benchmark.cpp)
    target_link_libraries(pac_tpch_compiler_benchmark ${PRIVACY_LINK_LIBS})

    # Unified DP utility benchmark runner
    add_executable(dp_benchmark_runner benchmark/dp/dp_benchmark_runner.cpp)
    target_link_libraries(dp_benchmark_runner ${PRIVACY_LINK_LIBS})

    # ClickHouse/ClickBench benchmark runner
    add_executable(pac_clickhouse_benchmark benchmark/clickbench/pac_clickhouse_benchmark.cpp)
    target_link_libraries(pac_clickhouse_benchmark ${PRIVACY_LINK_LIBS})

    # IMDb/JOB benchmark runner
    add_executable(imdb_benchmark benchmark/imdb/imdb_benchmark.cpp)
    target_link_libraries(imdb_benchmark ${PRIVACY_LINK_LIBS})

    # SQLStorm benchmark runner
    add_executable(pac_sqlstorm_benchmark benchmark/sqlstorm/pac_sqlstorm_benchmark.cpp)
    target_link_libraries(pac_sqlstorm_benchmark ${PRIVACY_LINK_LIBS})
endif()
